css/style.css
/* ... */
.contactText p {
  width: 80%;
  font-family: Sen;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 150%;

  color: #5d5d5d;

  padding: 5px 25px 0px 25px;
}

.contactMedia {
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: space-around;

  padding: 50px 25px 0px 25px;
}

.contactMedia div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contactMedia span {
  padding-top: 5px;
  color: #ffffff;
}

.contactMedia img {
  width: 40px;
}

.curriculum {
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 40px 0 0 0;
}

.button {
  display: inline-block;
  box-sizing: border-box;
  text-align: center;

  padding: 0.35em 1.2em;
  border: 0.1em solid #FFFFFF;
  border-radius: 0.12em;
  margin: 0 0.3em 0.3em 0;

  text-decoration: none;
  text-transform: uppercase;

  font-family: Sen;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;

  color: #FFFFFF;

  cursor: pointer;
  transition: all 0.2s;
}

.button:hover {
  color: #000000;
  background-color: #FFFFFF;
}

.contactForm {
  width: 100%;

  padding: 50px 0px 0px 0px;
}

.contactForm p {
  font-family: Sen;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 150%;

  color: #5d5d5d;

  padding: 20px 25px 0px 25px;
}

.asterisk {
  color: rgb(196, 42, 42);

  padding: 0px 3px 0px 0px;
}

.contactForm input {
  width: 50%;

  height: 50px;
  border: rgba(255, 255, 255, 0.8);

  padding: 0px 0px 0px 10px;
  margin: 3px 25px 0px 25px;
}

.contactForm input[type="submit"] {
  width: 51.5%;

  background: #003b36;
  color: #666666;
  border: none;

  cursor: pointer;

  font-family: Sen;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 150%;

  text-transform: uppercase;

  color: #ffffff;

  transition: background 0.2s;
  margin-top: 20px;
  margin-bottom: 80px;
}

.contactForm input[type="submit"]:hover {
  background: #f5911e8a;
}

footer {
  display: flex;
  align-items: center;
  justify-content: space-around;

  padding: 0px 0px 20px 0px;
}

.address {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

footer h1 {
  font-family: Sen;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 150%;

  color: #FFFFFF;
}

.address span:first-child {
  padding: 0px 0px 5px 0px;
}

.address span:last-child {
  padding: 15px 0px 0px 0px;
}

.social img {
  width: 80px;
}

.footerLoveMobile {
  display: none;
}

@media only screen and (max-width: 768px) {
  body {
    max-width: 768px;
    margin: 0 auto;
  }

  header {
    display: flex;
    flex-direction: column;
  }

  header span {
    padding: 30px 0 0 0;
  }

  header img {
    background-color: #ffffff;
  }

  .headerMenu {
    width: 100%;
    display: flex;
    text-align: center;
    flex-direction: column;

    padding-top: 20px;
  }

  .sectionTop {
    background-color: #181823;
    flex-wrap: wrap;
  }

  .sectionTopText h2 {
    margin: 0;
    padding: 35px 0px 15px 0px;
  }

  .sectionTop img {
    width: 100%;
  }

  .sectionTop div {
    width: 100%;
  }

  .sectionTop div h2 {
    font-family: Sen;
    font-style: normal;
    font-weight: bold;
    font-size: 32px;
    line-height: 38px;
  }

  .sectionWhat {
    display: flex;
    flex-direction: column;
    padding: 50px 10px 50px 10px;
  }

  .sectionWhat h1 {
    font-family: Sen;
    font-style: normal;
    font-weight: normal;
    font-size: 32px;
    line-height: 38px;

    padding: 0px 25px 0px 25px;
  }

  .sectionWhatNumbers {
    display: flex;
    flex-direction: column;
  }

  .sectionWhatNumbers div {
    padding: 45px 0px 5px 0px;
  }

  .sectionWhatNumbers h3 {
    padding-top: 2px;
    padding-bottom: 10px;
  }

  .sectionWhatNumbers h1 {
    font-size: 117px;
    line-height: 141px;
  }

  .myProjectsDescriptions {
    padding-left: 0;
  }

  .myProjectsDescriptions h1 {
    padding-left: 0;
    padding-right: 0;
  }

  .myProjectsDescriptions span {
    padding-left: 0;
    padding-right: 0;
  }

  .myProjects {
    flex-wrap: wrap;
    padding: 0px 30px 50px 30px;
  }

  .myProjects div {
    width: 100%;
  }

  .contact {
    flex-wrap: wrap;
  }

  .contactMedia {
    width: 75%;
  }

  .contactForm {
    padding: 0px;
  }

  .contactForm input {
    width: 75%;
  }

  .contactForm input[type="submit"] {
    width: 77.5%;
  }

  footer {
    flex-wrap: wrap;
  }

  .address {
    display: flex;
    align-items: center;

    padding: 0px 0px 25px 0px;
  }

  .footerLove {
    display: none;

    color: #ffffff;
  }

  .footerLoveMobile {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  footer img {
    padding: 25px 0px 0px 0px;
  }

  .skillset {
    flex-wrap: wrap;
    padding: 0px 30px 50px 30px;
  }

  .skillset p {
    width: 100%;
  }

  .skillsetBoxs {
    width: 100%;
    flex-wrap: wrap;
    padding: 0;
  }

  .skillsetBox {
    padding-top: 40px;
  }

  .skillsetBox h3 {
    width: 100%;
  }

  .skillsetBox p {
    width: 100%;
  }

  .contactText h2 {
    padding-top: 0px;
  }

  .contactMedia {
    padding-bottom: 20px;
  }

  .experience {
    width: 100% !important;
  }
}

